# hyalo

./: .gitignore  .hyalo.toml  AI_NOTICE  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.md  bench-e2e.sh  deny.toml  justfile
.cargo/: config.toml
.claude/: CLAUDE.md
.claude/agents/: rust-developer.md  rust-release-engineer.md
.claude/rules/: knowledgebase.md
.github/: release.yml
.github/workflows/: ci.yml  cloudsmith-republish.yml  publish-crates.yml  quality-gates.yml  release.yml
benches/: micro.rs  vault.rs
crates/hyalo-cli/: Cargo.toml  build.rs
crates/hyalo-cli/src/: broken_pipe.rs  config.rs  dispatch.rs  error.rs  hints.rs  lib.rs  main.rs  output.rs  output_pipeline.rs  run.rs  suggest.rs  warn.rs
crates/hyalo-cli/src/cli/: args.rs  banner.rs  help.rs  inputs.rs  mod.rs
crates/hyalo-cli/src/commands/: append.rs  backlinks.rs  changelog.rs  changelog_lint.rs  config.rs  create_index.rs  drop_index.rs  files_from.rs  find.rs  heading_grammar.rs  init.rs  inputs.rs  inputs.rs.bak  link_lint.rs  links.rs  lint.rs  lint_github.rs  lint_rules.rs  madr.rs  madr_lint.rs  managed_region.rs  mod.rs  mutation.rs  mv.rs  new.rs  okf.rs  okf_lint.rs  outline.rs  profiles.rs  properties.rs  read.rs  remove.rs  section_scanner.rs  set.rs  skills_lint.rs  summary.rs  tags.rs  tasks.rs  types.rs  views.rs
crates/hyalo-cli/src/commands/find/: build.rs  filter_index.rs  mod.rs  sort.rs  tests.rs
crates/hyalo-cli/templates/: extension-hyalo.ts  package.json  profile-changelog.toml  profile-madr.toml  profile-okf.toml  profile-skills.toml  rule-knowledgebase.md  skill-hyalo-changelog.md  skill-hyalo-madr.md  skill-hyalo-okf.md  skill-hyalo-pi.md  skill-hyalo-skills.md  skill-hyalo-tidy-pi.md  skill-hyalo-tidy.md  skill-hyalo.md
crates/hyalo-cli/tests/: e2e_append.rs  e2e_backlinks.rs  e2e_bm25.rs  e2e_completion.rs  e2e_config.rs  e2e_config_dir.rs  e2e_count.rs  e2e_errors.rs  e2e_find.rs  e2e_help.rs  e2e_hints.rs  e2e_index.rs  e2e_init.rs  e2e_jq.rs  e2e_links.rs  e2e_lint.rs  e2e_mv.rs  e2e_positional_file.rs  e2e_properties.rs  e2e_quiet.rs  e2e_read.rs  e2e_remove.rs  e2e_set.rs  e2e_short_flags.rs  e2e_site_prefix.rs  e2e_suggest.rs  e2e_summary.rs  e2e_tags.rs  e2e_task.rs  e2e_types.rs  e2e_views.rs
crates/hyalo-cli/tests/common/: mod.rs
crates/hyalo-cli/tests/e2e/: anchors.rs  append.rs  backlinks.rs  bm25.rs  broken_pipe.rs  changelog_profile.rs  completion.rs  config.rs  config_dir.rs  count.rs  cwd_features.rs  errors.rs  examples_contract.rs  feature_matrix.rs  files_from.rs  find.rs  help.rs  hints.rs  hyalo_config.rs  index.rs  init.rs  jq.rs  json_errors.rs  links.rs  links_iter136.rs  lint.rs  lint_rules.rs  llm_misuse.rs  madr.rs  madr_profile.rs  mod.rs  mv.rs  mv_batch.rs  mv_link_forms.rs  new.rs  okf.rs  okf_profile.rs  positional_file.rs  profile_composition.rs  properties.rs  (+14 more)
crates/hyalo-cli/tests/e2e/common/: mod.rs
crates/hyalo-core/: Cargo.toml
crates/hyalo-core/benches/: README.md  micro.rs  perf_ab.rs  vault.rs
crates/hyalo-core/src/: anchor.rs  auto_link.rs  bm25.rs  case_index.rs  content_search.rs  discovery.rs  filename_template.rs  filter.rs  frontmatter.rs  fs_util.rs  heading.rs  index.rs  lib.rs  link_fix.rs  link_graph.rs  link_resolve.rs  link_rewrite.rs  link_write.rs  links.rs  scanner.rs  schema.rs  tasks.rs  types.rs  util.rs  warn.rs
crates/hyalo-core/src/filter/: fields.rs  match_props.rs  mod.rs  parse.rs  sort.rs  tasks.rs
crates/hyalo-core/src/frontmatter/: mod.rs  parse.rs  types.rs
crates/hyalo-core/src/scanner/: body_state.rs  fence.rs  frontmatter.rs  mod.rs  strip.rs  visitor.rs
crates/hyalo-mdlint/: Cargo.toml
crates/hyalo-mdlint/src/: config.rs  engine.rs  lib.rs
crates/hyalo-mdlint/src/rules/: code_fence.rs  hyalo001.rs  hyalo002.rs  hyalo003.rs  hyalo004.rs  mod.rs
crates/xtask/: Cargo.toml  feature-matrix.toml  stale-help-patterns.toml
crates/xtask/src/: ac_fidelity.rs  bundled_skills.rs  feature_fanout.rs  help_drift.rs  main.rs  stubs.rs
docs/: ci.md  configuration.md  releasing.md
hyalo-knowledgebase/: .ignore  SEED.md  decision-log.md  iteration-plan.md  project-pitch.md  promotion-plan.md  tmp-iter-171-annotation-demo.md
hyalo-knowledgebase/backlog/: absence-filter.md  auto-link-config-exclusions.md  auto-link-first-only-existing-links.md  avoidable-clones-in-mutations.md  backlinks-absolute-path-resolution.md  backlinks-fatal-on-malformed-frontmatter.md  backlinks.md  bare-subcommand-defaults.md  bulk-tag-rename.md  claude-code-skill.md  claude-plugin-distribution.md  clippy-pedantic-cleanup.md  combined-queries.md  comment-block-handling.md  config-aware-help-text.md  content-search-skip-yaml-parse.md  context-command.md  cross-platform-link-resolution-failures.md  date-aware-comparison.md  deinit-command.md  discoverable-drill-down-commands.md  empty-body-pattern-matches-all.md  empty-status-panic.md  fields-all-keyword.md  fields-title-shorthand.md  fields-title-skip-body-scan.md  filter-index-entries-hashset.md  filter-typo-suggestion.md  find-limit-memory-optimization.md  frontmatter-collector-clone.md  frontmatter-reformatting.md  glob-filter-for-aggregate-commands.md  glob-negation-escaping-bug.md  glob-negation.md  graceful-parse-error-recovery.md  heading-code-spans-parsed-empty.md  help-all-flag.md  hints-flag-no-op-for-most-commands.md  index-orphan-count-discrepancy.md  index-server-raii.md  (+44 more)
hyalo-knowledgebase/docs/: schema-and-lint.md
src/: config.rs  content_search.rs  discovery.rs  filter.rs  frontmatter.rs  fs_util.rs  graph.rs  heading.rs  hints.rs  lib.rs  links.rs  main.rs  output.rs  parallel.rs  scanner.rs  tasks.rs  types.rs
src/commands/: append.rs  (+12 more)
tests/: e2e_append.rs  e2e_config.rs  e2e_errors.rs  e2e_find.rs  e2e_help.rs  e2e_hints.rs  e2e_jq.rs  e2e_links.rs  e2e_outline.rs  e2e_properties.rs  e2e_property_find.rs  e2e_property_list.rs  e2e_property_read.rs  e2e_property_remove.rs  e2e_property_set.rs  e2e_read.rs  e2e_remove.rs  e2e_set.rs  e2e_short_flags.rs  e2e_summary.rs  e2e_tags.rs  e2e_task.rs  e2e_tasks.rs
(+472 files in other folders)
