[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/hyalo-cli"]

[workspace.package]
version = "0.4.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/ractive/hyalo"

[workspace.dependencies]
# Internal crates
hyalo-core = { path = "crates/hyalo-core", version = "0.4.1" }

# External dependencies
anyhow = "1"
assert_cmd = "2"
clap = "4.6.0"
criterion = { version = "0.5", features = ["html_reports"] }
dunce = "1"
globset = "0.4"
ignore = "0.4"
libc = "0.2"
jaq-core = "2.2.1"
jaq-json = { version = "1.1.3", features = ["serde_json"] }
jaq-std = "2.1.2"
predicates = "3"
regex = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10"
tempfile = "3"
toml = "0.8"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.bench]
codegen-units = 1
lto = true
