[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/hyalo-cli"]

[workspace.package]
version = "0.6.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/ractive/hyalo"

[workspace.dependencies]
# Internal crates
hyalo-core = { path = "crates/hyalo-core", version = "0.6.2" }

# External dependencies
anyhow = "1"
assert_cmd = "2"
clap = "4.6.0"
criterion = { version = "0.5", features = ["html_reports"] }
dunce = "1"
globset = "0.4"
ignore = "0.4"
indexmap = { version = "2", features = ["serde"] }
libc = "0.2"
jaq-core = "2.2.1"
jaq-json = { version = "1.1.3", features = ["serde_json"] }
jaq-std = "2.1.2"
predicates = "3"
regex = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde-saphyr = "0.0.22"
strsim = "0.11"
serde_json = "1.0.149"
tempfile = "3"
toml = "0.8"

[workspace.lints.clippy]
# Enable the full pedantic group, then allow lints we intentionally skip.
pedantic = { level = "warn", priority = -1 }

# Intentionally allowed — not worth the noise/churn:
must_use_candidate = "allow"          # too many false positives on builder-style APIs
return_self_not_must_use = "allow"    # same rationale as must_use_candidate
doc_markdown = "allow"                # backtick suggestions for identifiers in docs
missing_errors_doc = "allow"          # # Errors sections not required yet
missing_panics_doc = "allow"          # # Panics sections not required yet
too_many_lines = "allow"              # function length — addressed structurally, not per-lint
module_name_repetitions = "allow"     # e.g. filter::FilterOp is fine
struct_excessive_bools = "allow"      # CLI options structs legitimately need bools

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.bench]
codegen-units = 1
lto = true
