[package]
name = "hyalo-cli"
description = "CLI for exploring and managing Markdown knowledge bases with YAML frontmatter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["cli", "yaml", "frontmatter", "markdown", "obsidian"]
categories = ["command-line-utilities"]

[[bin]]
name = "hyalo"
path = "src/main.rs"

[dependencies]
hyalo-core = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dunce = { workspace = true }
jaq-core = { workspace = true }
jaq-json = { workspace = true }
jaq-std = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-saphyr = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
