[package]
name = "hyalo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
dunce = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
indexmap = { workspace = true }
libc = { workspace = true }
regex = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-saphyr = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "micro"
harness = false

[[bench]]
name = "vault"
harness = false
