[package]
name = "hyalo-core"
description = "Core library for hyalo — frontmatter parsing, querying, and mutation for Markdown files"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["yaml", "frontmatter", "markdown", "parsing"]
categories = ["parser-implementations"]

[dependencies]
anyhow = { workspace = true }
dunce = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
indexmap = { workspace = true }
libc = { workspace = true }
regex = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-saphyr = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "micro"
harness = false

[[bench]]
name = "vault"
harness = false
