[package]
name = "hyalo-core"
description = "Core library for hyalo — frontmatter parsing, querying, and mutation for Markdown files"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["yaml", "frontmatter", "markdown", "parsing"]
categories = ["parser-implementations"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
dunce = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
indexmap = { workspace = true }
memchr = { workspace = true }
libc = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-saphyr = { workspace = true }
serde_json = { workspace = true }
strsim = { workspace = true }
tempfile = { workspace = true }
bm25 = { workspace = true }
rust-stemmers = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "micro"
harness = false

[[bench]]
name = "vault"
harness = false

[[bench]]
name = "perf_ab"
harness = false
